Updated Xhosa translation.
2005-03-29  Adi Attar  <aattar@cvs.gnome.org>

	* xh.po: Updated Xhosa translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-29  Adi Attar  <aattar@cvs.gnome.org>
+
+	* xh.po: Updated Xhosa translation.
+
 2005-03-29  Josep Puigdemont  <josep@imatge-sintetica.com>
 
 	* ca.po: Updated Catalan translation.
