Allow drag and drop operations with location bar icon.
2005-03-30  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-spatial-window.c: (get_dnd_icon_size),
	(location_button_drag_begin_callback), (get_data_binder),
	(location_button_drag_data_get_callback),
	(nautilus_spatial_window_instance_init):
	Allow drag and drop operations with location bar icon.

	Patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-03-30  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-spatial-window.c: (get_dnd_icon_size),
+	(location_button_drag_begin_callback), (get_data_binder),
+	(location_button_drag_data_get_callback),
+	(nautilus_spatial_window_instance_init):
+	Allow drag and drop operations with location bar icon.
+
+	Patch from Christian Neumair <chris@gnome-de.org>
+
+2005-03-30  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-file-operations-progress.c:
 	(nautilus_file_operations_progress_update),
 	(nautilus_file_operations_progress_destroy),
