--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-30  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-03-30  Josep Puigdemont  <josep@imatge-sintetica.com>
 
         * ca.po: Updated Catalan translation.
