--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_get_uri_shortname_for_display): Plug a leak.
+
 2005-03-22  Fernando Herrera  <fherrera onirica com>
 
 	* src/nautilus-connect-server-dialog-main.c: (main): call
