--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_get_uri_shortname_for_display): Plug the leak.
+
 2005-03-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	* icons/audio.svg:
