--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-31  Steve Murphy  <murf@e-tools.com>
+
+        * configure.in: Added "rw" to ALL_LINGUAS.
+
 2005-03-31  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libnautilus-private/nautilus-file-utilities.c:
