Added new Language, Kinyarwanda (rw), to this package

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-01  Steve Murphy  <murf@e-tools.com>
+
+        * rw.po: Added Kinyarwanda translation.
+
 2005-03-30  Josep Puigdemont  <josep@imatge-sintetica.com>
 
         * ca.po: Updated Catalan translation.
