--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-04  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file.c: (nautilus_file_matches_uri):
+	Don't leak file_uri.
+
 2005-04-04  Diego Gonzalez  <diego@pemas.net>
 
 	* libnautilus-private/Makefile.am: remove nautilus-theme.[c-h]
