Fix missing include.
2005-04-04  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-notes-viewer.c:
	Fix missing include.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-04-04  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-notes-viewer.c:
+	Fix missing include.
+
+2005-04-04  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-file.c: (nautilus_file_matches_uri):
 	Don't leak file_uri.
 
