Use label instead of entry if not editable. (#149201)
2005-04-05  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	Use label instead of entry if not editable.
	(#149201)

	Patch from Michael Terry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-04-05  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	Use label instead of entry if not editable.
+	(#149201)
+	
+	Patch from Michael Terry
+
 2005-04-04  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-notes-viewer.c:
