--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-11  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Maarten Grachten.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Added Kinyarwanda translation.
