--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-list-view.c: (fm_list_view_remove_file):
+	Free the stored selection path only when setting a new one.
+
 2005-04-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
