--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-11  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
