--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.10.1 are:
+* Use less memory for desktop background
+* Make authentication work for the external connect-to-server dialog
+* Fix leaks
+* Redraw less in the list view when deleting
+
 Major changes in 2.10.0 are:
 * Some fixes for startup notification to avoid focus-stealing
 * Center the file management prefs dialog
