--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-04-11  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.10.1 ===
+	
+2005-04-11  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
