--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.10.1 ===
+	
 2005-04-11  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Maarten Grachten.
