--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_destroy), (rename_file):
+	Remove delayed_rename timeout when registering a new one
+	or destroying the view.
+
+2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-list-view.c: (fm_list_view_remove_file):
 	Free the stored selection path only when setting a new one.
 
