--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 === nautilus 2.10.1 ===
 	
 2005-04-11  Vincent van Adrighem  <adrighem@gnome.org>
