Add more drop targets to location button.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-17  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-spatial-window.c:
+	Add more drop targets to location button.
+
 2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
