--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-18  Dennis Cranston  <dennis_cranston at yahoo com>
+
+	* src/nautilus-connect-server-dialog-main.c: (main)
+	Set window icon.
+	
 2005-04-17  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-spatial-window.c:
