Set window icon.
2005-04-18  Dennis Cranston  <dennis_cranston at yahoo com>

	* src/nautilus-connect-server-dialog-main.c: (main)
	Set window icon.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-18  Dennis Cranston  <dennis_cranston at yahoo com>
+
+	* src/nautilus-connect-server-dialog-main.c: (main)
+	Set window icon.
+
 2005-04-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
