Improve NautilusViewInfo view factory labels marked for translation.
2005-04-19  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-view-factory.h:
	* src/nautilus-navigation-window.c:
	* src/nautilus-window-manage-views.c:
	* src/nautilus-window-manage-views.h:
	* src/nautilus-window.c:
	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-icon-view.c:
	* src/file-manager/fm-list-view.c:
	Improve NautilusViewInfo view factory labels marked for translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-04-19  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-view-factory.h:
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-window-manage-views.c:
+	* src/nautilus-window-manage-views.h:
+	* src/nautilus-window.c:
+	* src/file-manager/fm-desktop-icon-view.c:
+	* src/file-manager/fm-icon-view.c:
+	* src/file-manager/fm-list-view.c:
+	Improve NautilusViewInfo view factory labels marked for translation.
+
 2005-04-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libnautilus-private/nautilus-directory-async.c:
