--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-19  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-04-18  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
