Updated Spanish translation.
2005-04-22  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2005-02-06 20:55+0100\n"
+"PO-Revision-Date: 2005-04-22 16:48+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -161,7 +161,7 @@ msgstr "Puntos"
 
 #: data/browser.xml.h:29
 msgid "Draft"
-msgstr "eliminador"
+msgstr "Borrador"
 
 #: data/browser.xml.h:30
 msgid "Drag a color to an object to change it to that color"
@@ -169,7 +169,7 @@ msgstr "Arrastre un color sobre un objeto para colorearlo"
 
 #: data/browser.xml.h:31
 msgid "Drag a pattern tile to an object to change it"
-msgstr "Arrastre un patrón de mosaico sobre un objeto para cambiarlo"
+msgstr "Arrastre un patrón de baldosas sobre un objeto para cambiarlo"
 
 #: data/browser.xml.h:32
 msgid "Drag an emblem to an object to add it to the object"
@@ -4579,12 +4579,12 @@ msgstr "apuntando hacia «%s»"
 # libnautilus-private/nautilus-search-bar-criterion.c:55
 #: src/file-manager/fm-icon-view.c:2673
 msgid "Icons"
-msgstr "Iconos"
+msgstr "iconos"
 
 # libnautilus-private/nautilus-search-bar-criterion.c:55
 #: src/file-manager/fm-icon-view.c:2674
 msgid "_Icons"
-msgstr "_Iconos"
+msgstr "_iconos"
 
 #: src/file-manager/fm-list-view.c:1593
 #, c-format
@@ -4611,14 +4611,14 @@ msgstr "Seleccione las columnas visibles en esta carpeta"
 # libnautilus-private/nautilus-search-bar-criterion.c:141
 #: src/file-manager/fm-list-view.c:2305
 msgid "List"
-msgstr "Lista"
+msgstr "lista"
 
 # libnautilus-private/nautilus-search-bar-criterion.c:71
 # libnautilus-private/nautilus-search-bar-criterion.c:86
 # libnautilus-private/nautilus-search-bar-criterion.c:141
 #: src/file-manager/fm-list-view.c:2306
 msgid "_List"
-msgstr "_Lista"
+msgstr "_lista"
 
 #: src/file-manager/fm-properties-window.c:482
 msgid "You can't assign more than one custom icon at a time!"
@@ -6008,11 +6008,11 @@ msgstr ""
 
 #: src/nautilus-navigation-window-menus.c:132
 msgid "If you clear the list of locations, they will be permanently deleted."
-msgstr "Si limpia la lista de ubicaciones, se eliminarán permanentemente."
+msgstr "Si limpia la lista de ubicaciones, se borrarán permanentemente."
 
 #: src/nautilus-navigation-window-menus.c:138
 msgid "Clear History"
-msgstr "eliminar histórico"
+msgstr "Eliminar histórico"
 
 # src/nautilus-window-menus.c:584
 #: src/nautilus-navigation-window-menus.c:287
@@ -6083,7 +6083,7 @@ msgstr "Especifique una dirección para abrir"
 
 #: src/nautilus-navigation-window-menus.c:550
 msgid "Clea_r History"
-msgstr "_eliminar histórico"
+msgstr "_Limpiar histórico"
 
 #. name, stock id, label
 #: src/nautilus-navigation-window-menus.c:551
