Updated Spanish translation.
2005-04-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -14,14 +14,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-04-22 20:34+0200\n"
-"PO-Revision-Date: 2005-04-23 01:40+0200\n"
+"POT-Creation-Date: 2005-04-23 18:14+0200\n"
+"PO-Revision-Date: 2005-04-23 18:19+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 # components/help/hyperbola-filefmt.c:398
 # components/help/hyperbola-filefmt.c:671
@@ -548,9 +548,9 @@ msgid ""
 msgstr ""
 "Una lista de descripciones bajo un icono en la vista de icono y el "
 "escritorio. El número actual de descripciones mostradas depende del nivel de "
-"ampliación. Los valores posibles son \"size\",·\"type\",·\"date_modified\",·\"date_changed\",·\"date_accessed"
-"\",·\"owner\",·\"group\",·\"permissions\",·\"octal_permissions\"·y·"
-"\"mime_type\"."
+"ampliación. Los valores posibles son \"size\",·\"type\",·\"date_modified\",·"
+"\"date_changed\",·\"date_accessed\",·\"owner\",·\"group\",·\"permissions\",·"
+"\"octal_permissions\"·y·\"mime_type\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:2
 msgid "Bring up a new window for every opened file"
@@ -848,8 +848,8 @@ msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
 msgstr ""
-"Si está definido como «true» se colocará un icono de enlace "
-"a la carpeta personal en el escritorio."
+"Si está definido como «true» se colocará un icono de enlace a la carpeta "
+"personal en el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
 msgid ""
@@ -874,8 +874,8 @@ msgid ""
 "sorted from \"z\" to \"a\"."
 msgstr ""
 "Si está definido como «true» los archivos en las ventanas nuevas se "
-"colocarán en sentido inverso. Ej: si se colocan por nombre entonces en "
-"vez de colocarlos de la «a» a la «z» se colocarán de la «z» a la «a»."
+"colocarán en sentido inverso. Ej: si se colocan por nombre entonces en vez "
+"de colocarlos de la «a» a la «z» se colocarán de la «z» a la «a»."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
@@ -884,11 +884,11 @@ msgid ""
 "sorted from \"z\" to \"a\"; if sorted by size, instead of being "
 "incrementally they will be sorted decrementally."
 msgstr ""
-"Si está definido como «true» los archivos en las ventanas nuevas se colocarán "
-"en sentido inverso. Ej: si se ordenados por nombre entonces en "
-"vez de colocarse de la «a» a la «z» se colocarán de la «z» a la «a» ; si "
-"se colocan por tamaño; en lugar de ordenarse incrementalmente se "
-"ordenarán decrementalmente."
+"Si está definido como «true» los archivos en las ventanas nuevas se "
+"colocarán en sentido inverso. Ej: si se ordenados por nombre entonces en vez "
+"de colocarse de la «a» a la «z» se colocarán de la «z» a la «a» ; si se "
+"colocan por tamaño; en lugar de ordenarse incrementalmente se ordenarán "
+"decrementalmente."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid "If true, icons will be laid out tighter by default in new windows."
@@ -900,8 +900,8 @@ msgstr ""
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
-"Si es «true» las etiquetas se colocarán a los lados de los iconos en "
-"lugar de por debajo de éstos."
+"Si es «true» las etiquetas se colocarán a los lados de los iconos en lugar "
+"de por debajo de éstos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid "If true, new windows will use manual layout by default."
@@ -936,8 +936,8 @@ msgid ""
 "Name of the Nautilus theme to use. This has been deprecated as of Nautilus "
 "2.2. Please use the icon theme instead."
 msgstr ""
-"Nombre del tema de Nautilus que se va a usar. Esto ha sido reemplazado en Nautilus "
-"2.2. Por favor utilice el tema de icono en su lugar."
+"Nombre del tema de Nautilus que se va a usar. Esto ha sido reemplazado en "
+"Nautilus 2.2. Por favor utilice el tema de icono en su lugar."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:63
 msgid "Nautilus handles drawing the desktop"
@@ -1572,8 +1572,8 @@ msgid ""
 "Cannot move \"%s\" because it or its parent folder are contained in the "
 "destination."
 msgstr ""
-"«%s» no puede moverse porque él o su carpeta superior están contenidos en "
-"el destino."
+"«%s» no puede moverse porque él o su carpeta superior están contenidos en el "
+"destino."
 
 #: ../libnautilus-private/nautilus-file-operations.c:623
 #, c-format
@@ -1752,8 +1752,8 @@ msgid ""
 "The name is already used for a special item that cannot be removed or "
 "replaced.  If you still want to move the item, rename it and try again."
 msgstr ""
-"El nombre se usa ya para un elemento especial que no puede quitarse "
-"o reemplazarse. Si aún quiere mover el elemento, renómbrelo e inténtelo de "
+"El nombre se usa ya para un elemento especial que no puede quitarse o "
+"reemplazarse. Si aún quiere mover el elemento, renómbrelo e inténtelo de "
 "nuevo."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1066
@@ -1766,7 +1766,9 @@ msgid ""
 "The name is already used for a special item that cannot be removed or "
 "replaced.  If you still want to copy the item, rename it and try again."
 msgstr ""
-"El nombre se usa ya para un elemento especial que no puede quitarse o reemplazarse. Si aún quiere copiar el elemento, renómbrelo e intente de nuevo."
+"El nombre se usa ya para un elemento especial que no puede quitarse o "
+"reemplazarse. Si aún quiere copiar el elemento, renómbrelo e intente de "
+"nuevo."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1075
 msgid "Unable to Replace File"
@@ -2227,8 +2229,8 @@ msgid ""
 "Please note that you can also delete them separately."
 msgstr ""
 "Si elige vaciar la papelera, todos los elementos que estén en ella se "
-"perderán permanentemente. Tenga en cuenta que también puede borrarlos "
-"cada uno por separado."
+"perderán permanentemente. Tenga en cuenta que también puede borrarlos cada "
+"uno por separado."
 
 # src/file-manager/fm-directory-view.c:2154
 #. name, stock id
@@ -2497,9 +2499,9 @@ msgid ""
 "that your gnome-vfs.keys file is in the wrong place or isn't being found for "
 "some other reason."
 msgstr ""
-"No se puede encontrar una descripción para «x-directory/normal». Probablemente "
-"esto signifique que su archivo gnome-vfs.keys está en un lugar incorrecto o "
-"que no se encuentra por alguna otra razón."
+"No se puede encontrar una descripción para «x-directory/normal». "
+"Probablemente esto signifique que su archivo gnome-vfs.keys está en un lugar "
+"incorrecto o que no se encuentra por alguna otra razón."
 
 #: ../libnautilus-private/nautilus-file.c:4733
 #, c-format
@@ -3292,12 +3294,14 @@ msgstr[1] "Esto abrirá %d ventanas separadas."
 msgid "Are you sure you want to permanently delete \"%s\"?"
 msgstr "¿Seguro que desea borrar permanentemente «%s»?"
 
-# src/file-manager/fm-directory-view.c:1860
+# src/file-manager/fm-directory-view.c:1855
 #: ../src/file-manager/fm-directory-view.c:828
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr "¿Está seguro de que desea borrar permanentemente el %0d elemento seleccionado?¿Está seguro de que desea borrar permanentemente los %d elementos seleccionados?"
+msgstr[0] "¿Seguro que desea borrar permanentemente el elemento seleccionado?"
+msgstr[1] "¿Seguro que desea borrar permanentemente los %d elementos seleccionados?"
 
 #: ../src/file-manager/fm-directory-view.c:836
 msgid "If you delete an item, it is permanently lost."
@@ -3420,8 +3424,7 @@ msgstr "El archivo «%s» no puede moverse a la papelera."
 #: ../src/file-manager/fm-directory-view.c:3134
 msgid "Cannot move items to trash, do you want to delete them immediately?"
 msgstr ""
-"No puede mover los elementos a la papelera, ¿quiere borrarlos "
-"inmediatamente?"
+"No puede mover los elementos a la papelera, ¿quiere borrarlos inmediatamente?"
 
 #: ../src/file-manager/fm-directory-view.c:3137
 msgid ""
@@ -3440,15 +3443,17 @@ msgstr "¿Borrar inmediatamente?"
 msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
 msgstr "¿Seguro que desea borrar permanentemente a «%s» de la papelera?"
 
-# src/file-manager/fm-directory-view.c:1860
+# src/file-manager/fm-directory-view.c:1855
 #: ../src/file-manager/fm-directory-view.c:3180
 #, c-format
 msgid ""
 "Are you sure you want to permanently delete the %d selected item from the "
 "trash?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr "¿Seguro de que desea borrar permanentemente el %0d elemento seleccionado de la papelera?¿Seguro de que desea borrar permanentemente los %d elementos seleccionados de la papelera?"
+msgstr[0] "¿Seguro que desea borrar permanentemente el elemento seleccionado de la papelera?"
+msgstr[1] "¿Seguro que desea borrar permanentemente los %d elementos seleccionados de la papelera?"
 
 #: ../src/file-manager/fm-directory-view.c:3189
 msgid "If you delete an item, it will be permanently lost."
@@ -3613,23 +3618,19 @@ msgstr "«%s» se copiará si selecciona el comando «Pegar archivos»"
 #, c-format
 msgid ""
 "The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
 "The %d selected items will be moved if you select the Paste Files command"
-msgstr ""
-"El %d elemento seleccionado se moverá si selecciona el comando «Pegar "
-"archivos»"
-"Los %d elementos seleccionados se moverán si selecciona el comando «Pegar "
-"archivos»"
+msgstr[0] "El elemento seleccionado se moverá si selecciona el comando «Pegar archivos»"
+msgstr[1] "Los %d elementos seleccionados se moverán si selecciona el comando «Pegar archivos»"
 
 #: ../src/file-manager/fm-directory-view.c:5232
 #, c-format
 msgid ""
 "The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
 "The %d selected items will be copied if you select the Paste Files command"
-msgstr ""
-"El %d elemento seleccionado se copiará si selecciona el comando «Pegar "
-"archivos»"
-"Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar "
-"Archivos»"
+msgstr[0] "El elemento seleccionado se copiará si selecciona el comando «Pegar archivos»"
+msgstr[1] "Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar archivos»"
 
 #: ../src/file-manager/fm-directory-view.c:5313
 #: ../src/file-manager/fm-tree-view.c:975
@@ -3687,8 +3688,7 @@ msgstr "Abrir _con"
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:5738
 msgid "Choose a program with which to open the selected item"
-msgstr ""
-"Seleccione un programa con el que abrir el elemento seleccionado"
+msgstr "Seleccione un programa con el que abrir el elemento seleccionado"
 
 #: ../src/file-manager/fm-directory-view.c:5739
 msgid "_Scripts"
@@ -4164,8 +4164,7 @@ msgstr "No tiene los permisos suficientes para ver el contenido de «%s»."
 #: ../src/file-manager/fm-error-reporting.c:61
 #, c-format
 msgid "\"%s\" couldn't be found. Perhaps it has recently been deleted."
-msgstr ""
-"«%s» no se ha podido encontrar. Quizás se haya borrado recientemente."
+msgstr "«%s» no se ha podido encontrar. Quizás se haya borrado recientemente."
 
 # src/file-manager/fm-error-reporting.c:115
 #: ../src/file-manager/fm-error-reporting.c:68
@@ -4188,8 +4187,8 @@ msgstr "Error al mostrar la carpeta"
 msgid ""
 "The name \"%s\" is already used in this folder. Please use a different name."
 msgstr ""
-"El nombre «%s» ya se está usando en esta carpeta. Por favor use un "
-"nombre distinto."
+"El nombre «%s» ya se está usando en esta carpeta. Por favor use un nombre "
+"distinto."
 
 #: ../src/file-manager/fm-error-reporting.c:108
 #, c-format
@@ -4422,7 +4421,9 @@ msgstr "Re_ordenar por nombre"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1402
 msgid "Reposition icons to better fit in the window and avoid overlapping"
-msgstr "Reposiciona los iconos para que quepan mejor en la ventana y evitar el solapamiento"
+msgstr ""
+"Reposiciona los iconos para que quepan mejor en la ventana y evitar el "
+"solapamiento"
 
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1408
@@ -4506,7 +4507,7 @@ msgstr "apuntando hacia «%s»"
 msgid "Icons"
 msgstr "iconos"
 
-#Lo ponemos en minúsculas
+# Lo ponemos en minúsculas
 # libnautilus-private/nautilus-search-bar-criterion.c:55
 #: ../src/file-manager/fm-icon-view.c:2674
 msgid "_Icons"
@@ -4961,8 +4962,8 @@ msgid ""
 "Before running Nautilus, please create the following folder, or set "
 "permissions such that Nautilus can create it."
 msgstr ""
-"Antes de ejecutar Nautilus, cree la siguiente carpeta o establezca "
-"permisos para que Nautilus la pueda crear."
+"Antes de ejecutar Nautilus, cree la siguiente carpeta o establezca permisos "
+"para que Nautilus la pueda crear."
 
 #: ../src/nautilus-application.c:259
 msgid "Couldn't Create Required Folders"
@@ -4978,7 +4979,8 @@ msgid ""
 "Before running Nautilus, please create these folders, or set permissions "
 "such that Nautilus can create them."
 msgstr ""
-"Antes de ejecutar Nautilus, cree estas carpetas, o establezca permisos para que Nautilus pueda crearlas."
+"Antes de ejecutar Nautilus, cree estas carpetas, o establezca permisos para "
+"que Nautilus pueda crearlas."
 
 #: ../src/nautilus-application.c:330
 msgid "Link To Old Desktop"
@@ -4986,7 +4988,8 @@ msgstr "Enlace al escritorio antiguo"
 
 #: ../src/nautilus-application.c:346
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
-msgstr "Se ha creado un enlace llamado «Enlace al escritorio antiguo» en el "
+msgstr ""
+"Se ha creado un enlace llamado «Enlace al escritorio antiguo» en el "
 "escritorio."
 
 #: ../src/nautilus-application.c:347
@@ -5105,8 +5108,8 @@ msgid ""
 "restarting Nautilus may help fix the problem."
 msgstr ""
 "Nautilus no puede utilizarse ahora debido a un error inesperado de Bonobo "
-"cuando intentaba encontrar el objeto shell. Matar bonobo-activation-"
-"server y reiniciar Nautilus quizá ayude a arreglar el problema."
+"cuando intentaba encontrar el objeto shell. Matar bonobo-activation-server y "
+"reiniciar Nautilus quizá ayude a arreglar el problema."
 
 #: ../src/nautilus-bookmarks-window.c:154
 #: ../src/nautilus-file-management-properties.c:229
@@ -5752,11 +5755,13 @@ msgstr "Software"
 msgid ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
+msgid_plural ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
-msgstr ""
+msgstr[0] ""
 "<b>Tipo de imagen:</b> %s (%s)\n"
 "<b>Resolución:</b> %dx%d píxeles\n"
+msgstr[1] ""
 "<b>Tipo de imagen:</b> %s (%s)\n"
 "<b>Resolución:</b> %dx%d píxeles\n"
 
@@ -5945,7 +5950,8 @@ msgid ""
 "Do you want to remove any bookmarks with the non-existing location from your "
 "list?"
 msgstr ""
-"¿Quiere quitar de su lista los marcadores que tengan una dirección no existente?"
+"¿Quiere quitar de su lista los marcadores que tengan una dirección no "
+"existente?"
 
 # src/nautilus-window-menus.c:602
 #: ../src/nautilus-navigation-window-menus.c:289
@@ -6443,7 +6449,8 @@ msgid ""
 "Couldn't display \"%s\", because Nautilus cannot contact the SMB master "
 "browser."
 msgstr ""
-"No se ha podido mostrar «%s», porque Nautilus no puede contactar con el visualizador SMB maestro."
+"No se ha podido mostrar «%s», porque Nautilus no puede contactar con el "
+"visualizador SMB maestro."
 
 #: ../src/nautilus-window-manage-views.c:1422
 msgid "Check that an SMB server is running in the local network."
@@ -6796,6 +6803,43 @@ msgstr "Servidores de red"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Ver sus servidores de red en el administrador de archivos Nautilus"
+
+# src/file-manager/fm-directory-view.c:1860
+#~ msgid ""
+#~ "Are you sure you want to permanently delete the %d selected item?Are you "
+#~ "sure you want to permanently delete the %d selected items?"
+#~ msgstr ""
+#~ "¿Está seguro de que desea borrar permanentemente el %0d elemento "
+#~ "seleccionado?¿Está seguro de que desea borrar permanentemente los %d "
+#~ "elementos seleccionados?"
+
+# src/file-manager/fm-directory-view.c:1860
+#~ msgid ""
+#~ "Are you sure you want to permanently delete the %d selected item from the "
+#~ "trash?Are you sure you want to permanently delete the %d selected items "
+#~ "from the trash?"
+#~ msgstr ""
+#~ "¿Seguro de que desea borrar permanentemente el %0d elemento seleccionado "
+#~ "de la papelera?¿Seguro de que desea borrar permanentemente los %d "
+#~ "elementos seleccionados de la papelera?"
+
+#~ msgid ""
+#~ "The %d selected item will be moved if you select the Paste Files "
+#~ "commandThe %d selected items will be moved if you select the Paste Files "
+#~ "command"
+#~ msgstr ""
+#~ "El %d elemento seleccionado se moverá si selecciona el comando «Pegar "
+#~ "archivos»Los %d elementos seleccionados se moverán si selecciona el "
+#~ "comando «Pegar archivos»"
+
+#~ msgid ""
+#~ "The %d selected item will be copied if you select the Paste Files "
+#~ "commandThe %d selected items will be copied if you select the Paste Files "
+#~ "command"
+#~ msgstr ""
+#~ "El %d elemento seleccionado se copiará si selecciona el comando «Pegar "
+#~ "archivos»Los %d elementos seleccionados se copiarán si selecciona el "
+#~ "comando «Pegar Archivos»"
 
 #~ msgid ""
 #~ "Type of bg_applier: BG_APPLIER_ROOT for root window or BG_APPLIER_PREVIEW "
